--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,13 +1,15 @@
 name: .NET
 
 on:
+  
   push:
     branches: 
       - b*
       - f*
-    
-  workflow_dispatch:
-  
+  pull_request:
+    branches: 
+      - b*
+      - f*
 
 jobs:
   build:
